remove "openai key"

--- a/zb_Medical_ground-truth-data.ipynb
+++ b/zb_Medical_ground-truth-data.ipynb
@@ -334,8 +334,10 @@
    "outputs": [],
    "source": [
     "from openai import OpenAI\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
     "\n",
-    "api_key=\"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\"\n",
+    "api_key = os.getenv(\"OPENAI_API_KEY\") # create a .env in the jupy project directory ($pwd) and write OPENAI_API_KEY=\"your_open_ai_key\"\n",
     "client = OpenAI(api_key=api_key)"
    ]
   },
